<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/weatherTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/weather"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/searchBarEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:hint="@string/cityName"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="text" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/weatherButton" />

    <TextView
        android:id="@+id/tempTextView"
        android:layout_width="360dp"
        android:layout_height="260dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/temperature"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        />

    <TextView
        android:id="@+id/sunsetTextView"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/sunset"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        />
    <TextView
        android:id="@+id/sunriseTextView"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/sunrise"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        />
</LinearLayout>