<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailedActivity">

    <TextView
        android:id="@+id/tempTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sunsetTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunset"
        app:layout_constraintTop_toBottomOf="@id/tempTextView" />

    <TextView
        android:id="@+id/sunriseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunrise"
        app:layout_constraintTop_toBottomOf="@id/sunsetTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>